Word wrap fix Signed-off-by: Xiaozhou Wang <xiaozhou.wang85@gmail.com>

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -112,4 +112,5 @@ footer {
 }
 pre {
     white-space: pre-wrap;
+	word-break: break-all;
 }
